--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "./out/main/index.js",
   "author": "https://github.com/Metanart",
   "homepage": "https://github.com/Metanart/arch",
-  "type": "module",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -41,10 +40,16 @@
     "electron": "^38.1.2",
     "electron-builder": "^25.1.8",
     "electron-vite": "^4.0.1",
-    "eslint": "^9.36.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
