--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.45.0",
     "vite": "^7.1.6"
   },
   "pnpm": {
