--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {},
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
+  }
 }
