--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,6 +5,9 @@
   "main": "index.ts",
   "scripts": {},
   "dependencies": {
-    "@electron-toolkit/utils": "^4.0.0"
+    "@electron-toolkit/utils": "^4.0.0",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.27"
   }
 }
