Replaced sqlite3 with better-sqlite3, added electron-rebuild and scripts for it

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -11,7 +11,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "types": [
-      "electron-vite/node"
+      "electron-vite/node",
+      "better-sqlite3",
     ],
     "baseUrl": ".",
     "paths": {
