--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,11 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.ts",
-  "scripts": {},
+  "scripts": {
+    "dev": "electron-vite dev",
+    "rebuild:native": "electron-rebuild -f -w better-sqlite3",
+    "postinstall": "electron-rebuild -f -w better-sqlite3"
+  },
   "dependencies": {
     "@electron-toolkit/utils": "^4.0.0",
+    "better-sqlite3": "^12.4.1",
     "reflect-metadata": "^0.2.2",
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.27"
-  }
+  },
+  "devDependencies": {
+    "@electron/rebuild": "^4.0.1",
+    "@types/better-sqlite3": "^7.6.13"
+  },
+  "build": {
+    "asarUnpack": [
+      "**/better-sqlite3/build/Release/*.node"
+    ]
+  },
+  "files": [
+    "dist/**",
+    "node_modules/**"
+  ]
 }
