--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,12 +9,17 @@
     "postinstall": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
+    "@arch/shared": "workspace:*",
+    "@automapper/core": "^8.8.1",
+    "@automapper/pojos": "^8.8.1",
     "@electron-toolkit/utils": "^4.0.0",
     "better-sqlite3": "^12.4.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@automapper/types": "^6.3.1",
     "@electron/rebuild": "^4.0.1",
     "@types/better-sqlite3": "^7.6.13"
   },
