--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@arch/shared",
+  "name": "@arch/shared-utils",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -8,7 +8,7 @@
     ".": "./index.ts"
   },
   "files": [
-    "**/public-api.ts"
+    "src/**/*"
   ],
   "dependencies": {
     "consola": "^3.4.2"
