Updated aliases, moved Shared domains into shared folders in the root of each app

--- a/apps/bridge/tsconfig.json
+++ b/apps/bridge/tsconfig.json
@@ -12,7 +12,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@bridge/*": [
+      "@domains/*": [
         "domains/*/public-api.ts"
       ],
     }
