--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,8 +9,8 @@
     "postinstall": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
-    "@arch/shared-utils": "workspace:*",
-    "@arch/shared-types": "workspace:*",
+    "@arch/utils": "workspace:*",
+    "@arch/types": "workspace:*",
     "@arch/contracts": "workspace:*",
     "@electron-toolkit/utils": "^4.0.0",
     "better-sqlite3": "^12.4.1",
