Added Settings bridge IPC cpde

--- a/apps/bridge/tsconfig.json
+++ b/apps/bridge/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@arch/tsconfig/tsconfig.node.json",
   "include": [
     "domains/**/*",
+    "shared/**/*",
     "index.ts",
     "index.d.ts",
   ],
@@ -14,6 +15,9 @@
     "paths": {
       "@domains/*": [
         "domains/*/public-api.ts"
+      ],
+      "@shared/*": [
+        "shared/*/public-api.ts"
       ],
     }
   }
