--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,7 +6,20 @@
   "scripts": {},
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.2.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@mui/x-data-grid": "^8.5.2",
+    "@reduxjs/toolkit": "^2.8.2",
+    "notistack": "^3.0.2",
+    "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.61.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.2",
+    "reset.css": "^2.0.2"
   },
   "devDependencies": {}
 }
