Replaced automapper woth a simple function

--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@arch/tsconfig/tsconfig.node.json",
   "include": [
-    "src/*",
+    "src/**/*",
     "index.ts"
   ],
   "compilerOptions": {
