--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@arch/utils": "workspace:*",
     "@arch/types": "workspace:*",
+    "@arch/enums": "workspace:*",
     "@arch/contracts": "workspace:*",
     "@electron-toolkit/utils": "^4.0.0",
     "better-sqlite3": "^12.4.1",
