arch: IPC API refactoring, updated IPC channels logic,

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "main": "index.ts",
+  "dependencies": {
+    "@arch/enums": "workspace:*"
+  },
   "exports": {
     ".": "./index.ts"
   },
