chore: Updating DB methods with generic ones

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -3,6 +3,7 @@
   "include": [
     "index.ts",
     "domains/**/*",
+    "appPaths.ts",
   ],
   "compilerOptions": {
     "composite": true,
@@ -16,6 +17,9 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@appPaths": [
+        "appPaths.ts"
+      ],
       "@domains/*": [
         "domains/*/public-api.ts"
       ],
